# new-derive

./: Cargo.toml  README.md  useful-links-for-Rust-macros.md
src/: lib.rs
