[package]
name = "new-derive"
version = "0.1.4"
categories = ["development-tools::procedural-macro-helpers", "parser-implementations"]
description = "`New` derive macro"
edition = "2021"
homepage = "https://github.com/tivrfoa/new-derive"
keywords = ["derive", "macro"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tivrfoa/new-derive"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
